...
            "value" : "حفظ"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "designsystem.abstract" : {
      "extractionState" : "manual",
...
            "value" : "في المكتبة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "In library"
          }
        }
      }
    },
    "designsystem.noAbstract" : {
      "extractionState" : "manual",
...
            "value" : "فتح التفاصيل"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open details"
          }
        }
      }
    },
    "designsystem.openInNewWindow" : {
      "extractionState" : "manual",
...
            "value" : "فتح في نافذة جديدة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open in New Window"
          }
        }
      }
    },
    "designsystem.pickPaperMessage" : {
      "extractionState" : "manual",
...
            "value" : "إزالة من المكتبة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove from library"
          }
        }
      }
    },
    "designsystem.save" : {
      "extractionState" : "manual",
...
            "value" : "حفظ في المكتبة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save to library"
          }
        }
      }
    },
    "designsystem.untitled" : {
      "extractionState" : "manual",
...
            "value" : "تم"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "notes.saveFailed" : {
      "extractionState" : "manual",
...
            "value" : "تم الحفظ"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Saved"
          }
        }
      }
    },
    "notes.saving" : {
      "extractionState" : "manual",
...
            "value" : "قيد القراءة"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reading"
          }
        }
      }
    },
    "status.toRead" : {
      "extractionState" : "manual",
...
