...
            "value" : "خيارات أخرى"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More options"
          }
        }
      }
    },
    "details.newCollection" : {
      "extractionState" : "manual",
...
            "value" : "تنزيل ملف PDF"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Download PDF"
          }
        }
      }
    },
    "details.pdfDownloaded" : {
      "extractionState" : "manual",
...
